# opencitivibes

./: .docker-remote.env.example  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .importlinter  ALEMBIC.md  Dockerfile  Dockerfile.dev  alembic.ini  coverage.json  init_db.py  main.py  pyproject.toml  requirements.txt
backend/.ropeproject/: history  history.json
backend/alembic/: env.py  script.py.mako
backend/authentication/: auth.py
backend/core/: __init__.py  correlation.py  logging_config.py  scheduler.py  sentry_config.py
backend/helpers/: ip_utils.py  language.py  pagination.py  password_validation.py  rate_limiter.py  request_utils.py  sanitization.py  security_headers.py  time_utils.py
backend/migrations/: __init__.py  add_deleted_columns.py  add_search_vector_columns.py  add_tags_tables.py  postgresql_fts_setup.py  sqlite_fts5_setup.py
backend/models/: __init__.py  config.py  exceptions.py  notification_types.py  schemas.py  search_schemas.py
backend/repositories/: __init__.py  account_deletion_repository.py  admin_note_repository.py  admin_role_repository.py  analytics_repository.py  appeal_repository.py  base.py  category_repository.py  comment_like_repository.py  comment_repository.py  consent_log_repository.py  data_export_repository.py  database.py  db_models.py  email_login_repository.py  flag_repository.py  idea_repository.py  incident_repository.py  login_event_repository.py  password_reset_repository.py  penalty_repository.py  policy_repository.py  privacy_repository.py  quality_repository.py  retention_repository.py  security_audit_repository.py  share_repository.py  tag_repository.py  totp_repository.py  trusted_device_repository.py  user_repository.py  vote_quality_repository.py  vote_repository.py  watchlist_repository.py
backend/routers/: admin_router.py  analytics_router.py  appeals_router.py  auth_router.py  beta_router.py  categories_router.py  comments_router.py  config_router.py  contact_router.py  email_login_router.py  errors_router.py  flags_router.py  ideas_router.py  legal_router.py  moderation_router.py  notifications_router.py  officials_router.py  password_reset_router.py  search_router.py  security_router.py  share_router.py  sitemap_router.py  tags_router.py  totp_router.py  users_router.py  votes_router.py
backend/scripts/: README.md  __init__.py  check_layer_imports.py  check_router_db_access.py  check_service_db_access.py  check_service_http_exceptions.py  cleanup_tokens.py  generate_test_data.py  migrate.py  optimize_search_indexes.py  sanitize_existing_ideas.py  seed_data.py
backend/services/: __init__.py  account_deletion_service.py  appeal_service.py  (+43 more)
(+515 files in other folders)
